<resources>
    <string name="app_name">FoodRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipies_fragment_title">Recipies</string>
    <string name="favourites_fragment_title">Favourites</string>
    <string name="food_joke_fragment_title">Food Joke</string>
    <string name="fab_content_desc">Floating action Button</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cover_image">Cover Image</string>
    <string name="_100">100</string>
    <string name="checked_icon">checked Icon</string>
    <string name="title">Title</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favourites">Save to Favourites</string>
    <string name="error_image">Error Image</string>
    <string name="no_favourites_recipes">No Favourites Recipes</string>
    <string name="delete_favourite_meny">Delete Favourite Meny</string>
    <string name="food_joke_dummy_text">Try drying margerine casserole mixed with red wine.</string>
    <string name="no_joke_found">No Joke Found</string>
    <string name="share">Share</string>
</resources>