<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.viewpager.OverViewFragment">

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/cover_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/image_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
        app:layout_constraintEnd_toEndOf="@+id/mainImageView"
        app:layout_constraintStart_toStartOf="@+id/mainImageView"
        app:layout_constraintTop_toTopOf="@+id/mainImageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
        app:layout_constraintEnd_toEndOf="@+id/mainImageView" />

    <ImageView
        android:id="@+id/timeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/timeTextView"
        app:layout_constraintEnd_toEndOf="@+id/timeTextView"
        app:layout_constraintStart_toStartOf="@+id/timeTextView"
        app:tint="@color/white"
        android:contentDescription="@string/checked_icon" />

    <TextView
        android:id="@+id/likesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
        app:layout_constraintEnd_toStartOf="@+id/timeTextView" />

    <ImageView
        android:id="@+id/likesImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likesTextView"
        app:layout_constraintEnd_toEndOf="@+id/likesTextView"
        app:layout_constraintStart_toStartOf="@+id/likesTextView"
        android:contentDescription="@string/checked_icon"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/courgette"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImageView" />

    <ImageView
        android:id="@+id/vegetarianImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:tint="@color/darkGray"
        android:contentDescription="@string/checked_icon" />

    <TextView
        android:id="@+id/vegetarianTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarianImageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarianImageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarianImageView" />

    <ImageView
        android:id="@+id/veganImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/checked_icon"
        app:layout_constraintStart_toStartOf="@+id/vegetarianImageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarianImageView"
        app:tint="@color/darkGray"/>

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/veganImageView"
        app:layout_constraintStart_toEndOf="@+id/veganImageView"
        app:layout_constraintTop_toTopOf="@+id/veganImageView" />

    <ImageView
        android:id="@+id/glutenFreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/checked_icon"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarianTextView"
        app:layout_constraintStart_toEndOf="@+id/vegetarianTextView"
        app:layout_constraintTop_toTopOf="@+id/vegetarianTextView"
        app:tint="@color/darkGray"/>

    <TextView
        android:id="@+id/glutenFreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFreeImageView"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeImageView"
        app:layout_constraintTop_toTopOf="@+id/glutenFreeImageView" />

    <ImageView
        android:id="@+id/dairyFreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/checked_icon"
        app:layout_constraintStart_toStartOf="@+id/glutenFreeImageView"
        app:layout_constraintTop_toBottomOf="@+id/glutenFreeImageView"
        app:tint="@color/darkGray"/>

    <TextView
        android:id="@+id/dairyFreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairyFreeImageView"
        app:layout_constraintStart_toEndOf="@+id/dairyFreeImageView"
        app:layout_constraintTop_toTopOf="@+id/dairyFreeImageView" />

    <ImageView
        android:id="@+id/healthyImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/checked_icon"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFreeTextView"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeTextView"
        app:layout_constraintTop_toTopOf="@+id/glutenFreeTextView"
        app:tint="@color/darkGray"/>

    <TextView
        android:id="@+id/healthyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthyImageView"
        app:layout_constraintStart_toEndOf="@+id/healthyImageView"
        app:layout_constraintTop_toTopOf="@+id/healthyImageView" />

    <ImageView
        android:id="@+id/cheapImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/checked_icon"
        app:layout_constraintStart_toStartOf="@+id/healthyImageView"
        app:layout_constraintTop_toBottomOf="@+id/healthyImageView"
        app:tint="@color/darkGray"/>

    <TextView
        android:id="@+id/cheapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/cheapImageView"
        app:layout_constraintStart_toEndOf="@+id/cheapImageView"
        app:layout_constraintTop_toTopOf="@+id/cheapImageView" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>